--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ on:
             - 'yarn.lock'
 
 env:
-    NODE_BUILD_VERSION: 18
+    NODE_BUILD_VERSION: 21
 
 jobs:
     dev-setup:
@@ -168,7 +168,7 @@ jobs:
                     - ubuntu-latest
                     - macos-latest
                     - windows-latest
-                node: [18]
+                node: [20, 21]
                 include:
                     - node: 20
                       os: ubuntu-latest
@@ -212,7 +212,7 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ubuntu-latest, macos-latest, windows-latest]
-                node: [18]
+                node: [20, 21]
                 shard: [1/4, 2/4, 3/4, 4/4]
                 include:
                     - node: 20
